# AI-PROJECT

./: .gitignore  CLEAN-SYSTEM.bat  Dockerfile  LICENSE  MANIFEST.in  README.md  README_SETUP.md  SETUP_CONDA.bat  START-ALL.bat  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt  run_api.py  run_ml_pipeline.py  setup.py  start-api.bat  start-n8n.bat  คู่มือ.md
config/: __init__.py  config.json
data/: .gitkeep  medical_ai.db
data/exports/: dataset_summary_20251007_233204.csv  download_summary_20251007_233204.json
data/exports/evaluation/flan_t5_confusion_matrix_20251019_163638/: confusion_matrix_results.json
data/exports/evaluation/flan_t5_confusion_matrix_20251019_164145/: FLAN_T5_Confusion_Matrix_Analysis.md  FLAN_T5_Confusion_Matrix_Analysis_Thai.md  confusion_matrix_results.json
data/exports/evaluation/flan_t5_evaluation_20251019_163024/: evaluation_results.json
docs/: ANALYZE_ENDPOINT.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  INSTALLATION_GUIDE.md  N8N_WORKFLOWS_GUIDE.md  PROMPT_ANALYSIS.md  PUSH_TO_GITHUB.md  QUICK-START-THAI.md  QUICK_START_ANALYZE.md  QUICK_WORKFLOW_GUIDE.md  TECHNICAL_IMPLEMENTATION.md  TROUBLESHOOTING_GUIDE.md
models/flan_t5_diagnosis_20251018_205708/: training_stats.json
models/t5_diagnosis_20251008_111522/: disease_mapping.json  training_stats.json
models/t5_diagnosis_extended/: training_stats.json
n8n/: README.md  medical_qa_workflow_complete.json
scripts/: CHECK-N8N-WORKFLOW.bat  CLEAN-SYSTEM.bat  QUICK-FIX-N8N.bat  evaluate-confusion-matrix.bat  evaluate-model.bat  train-model.bat
sql/: init.sql
src/: __init__.py
src/api/: __init__.py  integrated_medical_api.py
src/config/: __init__.py
src/ml_pipeline/: Main_12_Monitoring.py  Main_2_Data_Collection.py  Main_3_Data_Cleaning.py  Main_4_EDA.py  Main_5.5_Feature_Selection.py  Main_5_Feature_Engineering.py  Main_6_Data_Splitting.py  Main_8_Train_T5_Medical.py  Main_9_Confusion_Matrix_Evaluation.py  Main_9_FLAN_T5_Evaluation.py  Test_T5_Interactive.py  __init__.py  data_collection.py  evaluate_model.py  hyperparameter_tuning.py  model_selection.py  monitoring.py  train_flan_t5.py
src/models/: __init__.py  medical_ai.py
src/utils/: __init__.py  check_data.py
tests/: __init__.py  test_api.py  test_flan_t5.py  test_models.py
web_app/medical_qa_demo/: emergency-alert.js  index.html  script.js  style.css
